# datasette-enrichments

./: .gitignore  .readthedocs.yaml  Justfile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette_enrichments/: __init__.py  actions.py  hookspecs.py  utils.py  views.py
datasette_enrichments/templates/: enrich_data.html  enrichment.html  enrichment_job.html  enrichment_jobs.html  enrichment_picker.html
docs/: conf.py  developing.md  index.md  permissions.md  setup.md  usage.md
example-enrichments/: enrichments_examples.py  jinja_sandbox.py  openai_embeddings.py  pyproject.toml  uppercase.py
tests/: conftest.py  test_enrichments.py
